--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,11 @@
 [build]
   publish = "public"
-  command = "# no build command needed"
+  command = "# no build command"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.processing]
+  skip_processing = false
